[package]
name = "git-rustfmt"
version = "0.4.0"
authors = ["Nicholas Cameron <ncameron@mozilla.com>", "The Rustfmt developers"]
description = "Run rustfmt against git diff"
repository = "https://github.com/rust-lang-nursery/rustfmt"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools"]

[[bin]]
name = "git-rustfmt"

[dependencies]
env_logger = "0.5"
getopts = "0.2"
log = "0.3"
rustfmt-config = "0.4.0"
rustfmt-core = "0.4.0"
