[package]
name = "lintcheck"
version = "0.0.1"
description = "tool to monitor impact of changes in Clippy's lints on a part of the ecosystem"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-clippy"
categories = ["development-tools"]
edition = "2021"
publish = false

[dependencies]
cargo_metadata = "0.15.3"
clap = { version = "4.1.8", features = ["derive", "env"] }
crossbeam-channel = "0.5.6"
flate2 = "1.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
tar = "0.4"
toml = "0.5"
ureq = "2.2"
walkdir = "2.3"

[features]
deny-warnings = []
