[package]
name = "rustc-hash"
version = "1.1.0"
authors = ["The Rust Project Developers"]
description = "speedy, non-cryptographic hash used in rustc"
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["hash", "hasher", "fxhash", "rustc"]
repository = "https://github.com/rust-lang/rustc-hash"

[features]
default = ["std"]
std = []
rand = ["dep:rand", "std"]

[dependencies]
rand = { version = "0.8", optional = true }
