[package]
name = "rustfmt-config"
version = "0.4.0"
authors = ["Nicholas Cameron <ncameron@mozilla.com>", "The Rustfmt developers"]
description = "A library for configuring and customizing rustfmt"
repository = "https://github.com/rust-lang-nursery/rustfmt"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools"]

[dependencies]
rustc-ap-syntax = "29.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
