[package]
name = "rustfmt-format-diff"
version = "0.4.0"
authors = ["Nicholas Cameron <ncameron@mozilla.com>", "The Rustfmt developers"]
description = "Run rustfmt against diff"
repository = "https://github.com/rust-lang-nursery/rustfmt"
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools"]

[[bin]]
name = "rustfmt-format-diff"

[dependencies]
env_logger = "0.4"
getopts = "0.2"
log = "0.3"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"