[workspace]
members = ["subcrate", "issue-1567"]

[package]
name = "cargo-miri-test"
version = "0.1.0"
authors = ["Miri Team"]
edition = "2018"

[dependencies]
byteorder = "1.0"
cdylib = { path = "cdylib" }
issue_1567 = { path = "issue-1567" }
issue_1691 = { path = "issue-1691" }
issue_1705 = { path = "issue-1705" }

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
getrandom_1 = { package = "getrandom", version = "0.1" }
getrandom_2 = { package = "getrandom", version = "0.2" }
serde_derive = "1.0" # not actually used, but exercises some unique code path (`--extern` .so file)

[lib]
test = false # test that this is respected (will show in the output)
