[package]
name = "ui_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_version = "0.4"
colored = "2"
regex = "1.5.5"
pretty_assertions = "1.2.1"
crossbeam = "0.8.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# Doesn't do anything, but the miri script wants to pass the same flags to ui_test and miri itself
expensive-debug-assertions = []
