[package]
edition = "2018"
name = "xtask"
version = "0.1.0"
authors = ["rust-analyzer developers"]
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.26"
flate2 = "1.0"
proc-macro2 = "1.0.8"
quote = "1.0.2"
ungrammar = "=1.12"
walkdir = "2.3.1"
write-json = "0.1.0"
xshell = "0.1"
xflags = "0.2.1"
# Avoid adding more dependencies to this crate
