[package]
name = "xtask"
version = "0.1.0"
publish = false
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
flate2 = "1.0.24"
write-json = "0.1.2"
xshell.workspace = true
xflags = "0.3.0"
time = { version = "0.3", default-features = false }
zip = { version = "0.6", default-features = false, features = ["deflate", "time"] }
# Avoid adding more dependencies to this crate
