[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bci-signal-processor"
version = "0.1.0"
description = "BCI Signal Processor + State Server for OpenClaw integration"
requires-python = ">=3.10"
dependencies = [
    "brainflow>=5.10.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
deep = [
    "torch>=2.0.0",
    "braindecode>=0.8.0",
    "mne>=1.6.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
bci-signal-processor = "src.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
